2013-01-04  Dmitrijs Ledkovs  <xnox@ubuntu.com>

	* init/conf.c: add ability to apply override files from higher
	  priority configuration sources.
	* init/tests/test_conf.c: test that multiple override files are
	  correctly applied and removed.
	* init/tests/test_conf_static.c: test override file detection.

2012-12-17  James Hunt  <james.hunt@ubuntu.com>

	* init/man/init.5: Document that User Jobs are not supported
	  within a chroot environment.

2012-12-14  Steve Langasek  <steve.langasek@ubuntu.com>
	* init/job_class.[ch]: instead of assuming a fixed value (0) as the
	  default nice value for job processes, use whatever the nice value
	  of the current process is.  This will be important later for user
	  sessions where an entire session may be started with a higher nice
	  value; and it fixes running the test suite as part of a nice'd
	  build.
	* init/tests/test_job_class.c: update test suite to match.

2012-12-11  James Hunt  <james.hunt@ubuntu.com>

	* init/Makefile.am: Add explicit -lrt for tests (LP: #1088863)

2012-12-07  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.6.1
	* configure.ac: Change version to 1.6.1

2012-12-07  James Hunt  <james.hunt@ubuntu.com>

	* init/Makefile.am:
	  - TEST_DATA_DIR: use $srcdir, not $PWD.
	  - TEST_DATA_FILES: Corrected filename.
	* dbus/com.ubuntu.Upstart.xml: Restart: Add annotation to make it
	  manifest this is an async call.
	* util/telinit.c: restart_upstart(): Use the async call to avoid the
	  client-side complaining if it detects that Upstart has severed all
	  D-Bus connections in preparation for the re-exec.

2012-12-06  James Hunt  <james.hunt@ubuntu.com>

	* init/job_class.c:
	  - job_class_add_safe(): Don't assert on name collisions for jobs
	    associated with a different session.  (LP: #1079715).
	  - job_class_serialise(): Explicitly disallow user and chroot
	    sessions from being serialised since this scenario is not
	    supported (due to our not serialising ConfSource objects yet).