@@ -31,10 +31,16 @@ char *    get_home_subdir        (const char * suffix)
 char *    xdg_get_config_home    (void)
 	__attribute__ ((malloc, warn_unused_result));
 
+char *    xdg_get_cache_home     (void)
+	__attribute__ ((malloc, warn_unused_result));
+
 char **   xdg_get_config_dirs    (void)
 	__attribute__ ((malloc, warn_unused_result));
 
 char **   get_user_upstart_dirs  (void)
+	__attribute__ ((malloc, warn_unused_result));
+
+char *    get_user_log_dir       (void)
 	__attribute__ ((malloc, warn_unused_result));
 
 NIH_END_EXTERN
