@@ -1,3 +1,15 @@
+2013-01-14  Dmitrijs Ledkovs  <xnox@ubuntu.com>
+
+	* init/xdg.[ch]: add xdg_get_cache_home and get_user_log_dir
+	  functions. These retrieve XDG_CACHE_HOME and a subdir inside it
+	  for upstart.
+	* init/tests/test_xdg.c: reuse test_get_config_home to test both
+	  xdg_get_cache_home and xdg_get_config_home. Add test for
+	  get_user_log_dir.
+	* init/main.c: use get_user_log_dir to setup logging
+	  directory in user_mode. For now, command line argument is
+	  honoured, while the environment override is not.
+
 2013-01-04  Dmitrijs Ledkovs  <xnox@ubuntu.com>
 
 	* init/conf.c: add ability to apply override files from higher
